unpackaged/main/default/objects/Product2/fields/Lifecycle__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle__c</fullName>
    <description>Lifecycle</description>
    <label>Lifecycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Pre-obsolete</fullName>
            </value>
            <value>
                <fullName>Obsolete</fullName>
            </value>
            <value>
                <fullName>In Launch Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>