unpackaged/main/default/objects/Product2/fields/Product_Duplicate_Check__c.field-meta.xml
<CustomField>
    <fullName>Product_Duplicate_Check__c</fullName>
    <description>This field is used to do a duplicate check on the Product Name.</description>
    <label>Product Duplicate Check</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>