unpackaged/main/default/objects/Product2/fields/Tech_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Tech_Product_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tech Product Group associated with this Product. Used to determine Skills needed when assigning Tech Support for case.</description>
    <label>Tech Product Group</label>
    <referenceTo>ProfileSkill</referenceTo>
    <relationshipLabel>Products (Tech Product Group)</relationshipLabel>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>