unpackaged/main/default/objects/Product2/fields/TwelveMonthCost__c.field-meta.xml
<CustomField>
    <fullName>TwelveMonthCost__c</fullName>
    <description>For reporting only for BI Team TSF-60</description>
    <label>TwelveMonthCost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>